fix tags and social divs on small screens

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -171,20 +171,18 @@ body {
 		}
 	}
 }
-header .entry-meta {
-	display: none; // hide header meta on small screens
-	@media #{$notsmall} {
-		display: block;
-	}
-}
 .entry-title a {
     text-decoration: none;
 }
 .tags-div {
-	float: left;
+	@media #{$notmedium} {
+		float: left;
+	}
 }
-.support-div {
-	float: right;
+.social-div {
+	@media #{$notmedium} {
+		float: right;
+	}
 }
   
 .feature {
